opam-version: "1.2"
name: "ocaml-kojson"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/ocaml-kojson/"
bug-reports: "https://github.com/paurkedal/ocaml-kojson/issues"
dev-repo: "https://github.com/paurkedal/ocaml-kojson.git"
license: "LGPL-3 with OCaml linking exception"

build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "dune" {build}
  "ppx_compose"
  "prime"
  "yojson"
]
