opam-version: "2.0"
name: "ocaml-kojson"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-kojson/"
bug-reports: "https://github.com/paurkedal/ocaml-kojson/issues"
depends: [
  "ocaml"
  "dune" {>= "1.0"}
  "ppx_compose"
  "prime"
  "yojson"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-kojson.git"
synopsis: "JSON parser combinators"
